--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 version=2.8.2-SNAPSHOT
+classifier=pipelinerx
 # Dependency versions
-spockVersion=0.7-groovy-1.8
+#spockVersion=0.7-groovy-1.8
+spockVersion=1.3-groovy-2.4
 jgitVersion=3.7.1.201504261725-r
 junitVersion=4.12
 cglibVersion=3.2.0
